fix text overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -784,6 +784,9 @@ body {
 .song-name {
   font-weight: 400;
   font-size: 1rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .artist-name {
   color: #a7a7a7;
